# auto-fast-dl

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
