[package]
name = "auto-fast-dl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
colored = "2.1.0"
futures = "0.3.31"
indicatif = { version = "0.17.9", features = ["tokio"] }
num-format = "0.4.4"
reqwest = { version = "0.12.9", default-features = false, features = [
    "http2",
    "macos-system-configuration",
    "rustls-tls",
    "stream",
] }
sysinfo = "0.32.0"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros", "signal"] }
uuid = { version = "1.11.0", default-features = false, features = ["v4", "fast-rng", "std"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'